# gaia.sys

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
assets/dialogue/: tutorial.yarn
assets/shaders/: geothermal.wgsl
crates/asset_tracking/: Cargo.toml
crates/asset_tracking/src/: asset_tracking.rs  lib.rs
crates/camera/: Cargo.toml
crates/camera/src/: camera.rs
crates/common/src/: lib.rs  states.rs  system_sets.rs
crates/common/src/components/: audio.rs
crates/credits/: Cargo.toml
crates/credits/src/: credits.rs  lib.rs
crates/dev_tools/: Cargo.toml
crates/dev_tools/src/: dev_tools.rs  lib.rs
crates/gameplay/: Cargo.toml
crates/gameplay/src/: gameplay.rs  lib.rs
crates/loading/: Cargo.toml
crates/loading/src/: loading.rs
crates/planet_generation/: Cargo.toml
crates/planet_generation/src/: controls.rs  geothermal_material.rs  lib.rs  noise_filter.rs  planet_generation.rs  planet_settings.rs  terrain_face.rs
crates/screens/: Cargo.toml
crates/screens/src/: lib.rs  screens.rs
crates/splash/: Cargo.toml
crates/splash/src/: lib.rs  splash.rs
crates/theme/: Cargo.toml
crates/theme/src/: interaction.rs  lib.rs  widgets.rs
crates/title/: Cargo.toml
crates/title/src/: title.rs
crates/tutorial/: Cargo.toml
crates/tutorial/src/: input_observer.rs  lib.rs  tutorial.rs
src/: lib.rs  main.rs
