[package]
name = "gaia_sys"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bevy = "=0.16.0-rc.3"
bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui.git", rev = "51f0a42e3892c2776d692c456ea1f2a4ced7e6ce"}
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git" }
noise = "0.9.0"

[dependencies]
bevy = { workspace = true }
asset_tracking = { path = "crates/asset_tracking" }
camera = { path = "crates/camera" }
common = { path = "crates/common" }
dev_tools = { path = "crates/dev_tools" }
screens = { path = "crates/screens" }
theme = { path = "crates/theme" }

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# This profile will be used for `bevy run web` automatically
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
