[package]
name = "screens"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
common = { path = "../common" }
credits = { path = "../credits" }
gameplay = { path = "../gameplay" }
loading = { path = "../loading" }
splash = { path = "../splash" }
title = { path = "../title" }